PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2006, PHP 5.2.0
- Disable realpath cache when open_basedir or safe_mode are enabled on a 
  per-request basis. (Ilia)
- Optimized zend_try/zend_catch macroses (eliminated memcpy()). (Dmitry)
- Optimized require_once/include_once (eliminated fopen() on second usage).
  (Dmitry)
- Optimized request shutdown sequence. Restoring ini directives now
  iterates over modified directives only instead of all. (Dmitry)
- FastCGI SAPI improved. (Dmitry)
  . Removed source compatibility with libfcgi
  . Optimized access to FastCGI environment variables using HashTable instead
    of linear search
  . Allowed PHP_FCGI_MAX_REQUESTS=0, that assumes no limit
  . Allowed PHP_FCGI_CHILDREN=0, that assumes no worker children (FastCGI
    requests are handled by main process itself).
- Added new error mode E_RECOVERABLE_ERROR. (Derick, Marcus, Tony)
- Added support for getenv() input filtering. (Rasmus)
- Removed ze1 compatibility mode. (Marcus)
- Added support for constructors in interfaces to force constructor signature
  checks in implementations. (Marcus)
- Changed __toString to be called whereever applicable. (Marcus)
- Improved xmlReader: (Rob)
  . Added readInnerXml(), xmlReader::setSchema().
  . Added readInnerXML(), readOuterXML(), readString(), setSchema(). (2.6.20+)
  . Changed to passing libxml options when loading reader.
- Improved PDO:
  . Added new attribute ATTR_DEFAULT_FETCH_MODE. (Pierre)
  . Added FETCH_PROPS_LATE. (Marcus)
- Improved SPL: (Marcus)
  . Added RegExIterator and RecursiveRegExIterator.
  . Added full caching support and ArrayAccess to CachingIterator.
  . Added array functions to ArrayObject/ArrayIterator and made them faster.
  . Added support for reading csv and skipping empty lines in SplFileObject.
  . Added CachingIterator::TOSTRING_USE_INNER, calls inner iterator __toString.