@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2006, PHP 5.2.0
+- Added control character checks for cURL extension's open_basedir/safe_mode
+  checks. (Ilia)
 - Disable realpath cache when open_basedir or safe_mode are enabled on a 
   per-request basis. (Ilia)
 - Optimized zend_try/zend_catch macroses (eliminated memcpy()). (Dmitry)
